<resources>
    <string name="app_name">Boggle Online</string>

    <!--Main menu screen-->
    <string name="boggle_online">Boggle Online</string>
    <string name="single_player">Single Player</string>
    <string name="multiplayer">Multiplayer</string>
    <string name="menu_settings">Settings</string>

    <!--Settings screen-->
    <string name="settings">SETTINGS</string>
    <string name="name">Name: </string>
    <string name="enter_name">Enter name...</string>
    <string name="game_time">Game Time: </string>
    <string name="enter_time">Enter time...</string>
    <string name="save">Save</string>

    <!--Boggle screen-->
    <string name="points">Points: 0</string>
    <string name="time">Time: 0</string>
    <string name="info">Press PLAY to Start!</string>
    <string name="start_forming">Start forming some words!</string>
    <string name="play">Play</string>
    <string name="clear">Clear</string>
    <string name="submit">Submit</string>
    <string name="dash">-</string>

    <!--Lobby screen-->
    <string name="num_players">Players: ?/2</string>
    <string name="game_time_90">Game Time: 90 sec</string>
    <string name="join">Join</string>
    <string name="code">CODE: XXXXX</string>
    <string name="user_1">User 1</string>
    <string name="user_2">User 2</string>
    <string name="start">Start</string>

    <!--Join screen-->
    <string name="enter_code">Enter code here...</string>

    <!--Score screen-->
    <string name="score">SCORE</string>
    <string name="user_1_points">User 1\'s Points</string>
    <string name="user_2_points">User 2\'s Points</string>
    <string name="winner">The winner is...</string>
    <string name="return_main_menu">Return to the main menu</string>

</resources>